--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,19 +1,13 @@
 <% div_for comment do %>
-  <p>
-    <b>Name:</b>
-    <%= comment.name %>
-  </p>
-
-  <p>
-    <b>Email:</b>
-    <%= comment.email %>
-  </p>
-
-  <p>
-    <b>Body:</b>
-    <%= comment.body %>
-  </p>
-
-<%= link_to 'Edit', edit_article_comment_path(@article, comment) %> |
-<%= link_to 'Delete', article_comment_path(@article, comment), :confirm => 'Are you sure?', :method => :delete %>
+  <div id = "comment_author">
+  <%= comment.name %>
+  <%= link_to 'Edit', edit_article_comment_path(@article, comment) %>
+  <%= link_to 'Delete', article_comment_path(@article, comment), :confirm => 'Are you sure?', :method => :delete %>
+  </div>
+  <div id = "comment_created_at">
+  <%= comment.created_at %>
+  </div>
+  <div id = "comment_text">
+<p><%= comment.body %></p>
+  </div>
 <% end %>
