--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
+  <div class="field">
+    <%= f.label :tag_names, "Tags" %>  
+    <%= f.text_field :tag_names %>  
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
