--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -24,6 +24,49 @@ div.field, div.actions {
   color: green;
 }
 
+#comments {
+  margin-bottom: 25px;
+  border-top: 1px solid #666;
+  border-left: 1px solid #666;
+  border-right: 1px solid #666;
+  background: #F1F1F1;
+}
+
+.comment {
+  padding: 9px;
+  border-bottom: 1px solid #666; 
+}
+
+#comment_author {
+  font-weight:bold;
+  padding:9px 0 0 45px;
+}
+
+#comment_created_at {
+  padding:0 0 9px 45px;
+  color:#666;
+  font-size:11px;
+}
+
+#comment_text {
+padding: 0 0 0 45px;
+}
+
+.article_body{
+  margin-bottom:1.5em;
+}
+
+#article-content{
+  padding:0 1.5em 0 1.5em;
+}
+
+#article-content h1{
+  font-size:3em;
+line-height:1;
+margin-bottom:0;
+padding-left: 0;
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
