--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,5 +18,26 @@
     </p>
   </div>
 </div>
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<% if can? :update, @article%>
+  <%= link_to 'Edit', edit_article_path(@article) %> |
+<% end %>
 <%= link_to 'Back', articles_path %>
+<h2>Comments</h2>
+<div id ="comments">
+  <%= render :partial => @article.comments %>
+</div>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :body %><br />
+    <%= f.text_area :body %>
+  </div>
+  <p><%= f.submit %></p>
+<% end %>
