--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Listing articles</h1>
-<%= render @articles %>
+<div class="article_index">
+  <%= render @articles %>
+</div>
 <br />
 <%= link_to 'New Article', new_article_path %>
