--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,16 +1,13 @@
-<p>
-  <b>Title:</b>
-  <%= article.title %>
-</p>
-
-<p>
-  <b>Body:</b>
-  <%= article.body %>
-</p>
-<%= link_to 'Show', article %>
-<% if can? :update, article  %>
-  <%= link_to 'Edit', edit_article_path(article) %>
-<% end %>
-<% if can? :delete, article  %>
-  <%= link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete %>
-<% end %>
+<div class="article_header">
+  <h2><%= article.title %></h2>
+  By <%= article.user.email %> on <%= article.created_at.strftime("%B %d %Y") %><br />
+</div>
+  <%= truncate(article.body, :length => 500) %><br />
+  <%= link_to 'Show', article %>
+  <% if can? :update, article %>
+   | <%= link_to 'Edit', edit_article_path(article) %> |
+  <% end %>
+  <% if can? :destroy, article %>
+    <%= link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete %>
+  <% end %>
+  <br /><br />
