--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
   <h1><%= @article.title %></h1>
   </div>
  <div class="article_body">
-    <p>By "Bob"
+    <p>By <%= @article.user.email %>
     on <%= @article.created_at.strftime("%B %d, %Y") %>
     </p>
     <p>
